Fix padding top issues on smaller screens

--- a/_sass/components/_grid.scss
+++ b/_sass/components/_grid.scss
@@ -22,9 +22,15 @@
     .content-inner {
         grid-area: content;
         padding-top: 2.5rem;
+    }
+}
 
-        @media (max-width: 767px) {
-            padding-top: 5rem;
+body.sciences {
+    .content-box {
+        .content-inner {
+            @media (max-width: 767px) {
+                padding-top: 5rem;
+            }
         }
     }
 }
